# microvisionchain

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  COPYING  INSTALL.md  Makefile.am  README.md  autogen.sh  bitbucket-pipelines.yml  configure.ac  libmvcconsensus.pc.in
.github/workflows/: release.yml
build-aux/m4/: ax_boost_base.m4  mvc_find_bdb53.m4  mvc_subdir_to_include.m4
ci/test/: 00_setup_env_android.sh
depends/: README.md  description.md
depends/patches/bdb/: clang_cxx_11.patch
depends/patches/miniupnpc/: dont_leak_info.patch  (+1 more)
doc/: Doxyfile  README.md  README_windows.txt  REST-interface.md  assets-attribution.md  bips.md  build-unix.md  developer-notes.md  files.md  init.md  keys.md  reduce-traffic.md  release-notes-v0.1.1.md  release-notes-v0.1.2.md  release-notes-v0.1.3.1.md  release-notes-v0.1.3.md  release-notes-v0.1.4.md  release-notes-v0.2.0.md  release-notes.md  shared-libraries.md  txid.md  zmq.md
doc/design/: assumeutxo.md  libraries.md  multiprocess.md
doc/man/: Makefile.am  mvc-cli.1  mvc-tx.1  mvcd.1
doc/policy/: README.md  mempool-limits.md  mempool-replacements.md  packages.md
share/: genbuild.sh  on_prod_tag.sh  setup.nsi.in
share/rpcuser/: rpcuser.py
src/: CMakeLists.txt  Makefile.am  Makefile.leveldb.include  abort_node.cpp  abort_node.h  addrdb.cpp  addrdb.h  addrman.cpp  addrman.h  amount.cpp  amount.h  arith_uint256.cpp  arith_uint256.h  async_file_reader.h  base58.cpp  base58.h  big_int.cpp  big_int.h  block_file_access.cpp  block_file_access.h  block_file_info.cpp  block_file_info.h  block_hasher.h  block_index.cpp  block_index.h  block_index_store.h  block_index_store_loader.cpp  block_index_store_loader.h  blockencodings.cpp  blockencodings.h  blockfileinfostore.cpp  blockfileinfostore.h  blockindex_with_descendants.h  blockstreams.h  blockvalidation.h  bloom.cpp  bloom.h  cfile_util.cpp  cfile_util.h  chain.cpp  (+168 more)
src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  glibcxx_sanity.cpp  sanity.h  strnlen.cpp
src/config/: CMakeLists.txt  mvc-config.h.cmake.in
src/consensus/: consensus.h  merkle.cpp  merkle.h  params.h  validation.h
src/crypto/: CMakeLists.txt  aes.cpp  aes.h  chacha20.cpp  chacha20.h  common.h  hmac_sha256.cpp  hmac_sha256.h  hmac_sha512.cpp  hmac_sha512.h  ripemd160.cpp  ripemd160.h  sha1.cpp  sha1.h  sha256.cpp  sha256.h  sha256_sse4.cpp  sha512.cpp  sha512.h
src/crypto/ctaes/: README.md
src/double_spend/: dsattempt_handler.cpp  dsattempt_handler.h  dscallback_msg.cpp  dscallback_msg.h  dsdetected_defaults.h  dsdetected_message.cpp  dsdetected_message.h  dstxn_serialiser.cpp  dstxn_serialiser.h  time_limited_blacklist.h
src/invalid_txn_sinks/: file_sink.cpp  file_sink.h  zmq_sink.cpp  zmq_sink.h
src/mining/: assembler.cpp  assembler.h  candidates.cpp  candidates.h  factory.cpp  factory.h  journal.cpp  journal.h  journal_builder.cpp  journal_builder.h  journal_change_set.cpp  journal_change_set.h  journal_entry.cpp  journal_entry.h  journaling_block_assembler.cpp  journaling_block_assembler.h
src/net/: association.cpp  association.h  association_id.cpp  association_id.h  block_download_tracker.cpp  block_download_tracker.h  net.cpp  net.h  net_message.cpp  net_message.h  net_processing.cpp  net_processing.h  net_types.h  netaddress.cpp  netaddress.h  netbase.cpp  netbase.h  node_state.cpp  node_state.h  node_stats.h  send_queue_bytes.h  stream.cpp  stream.h  stream_policy.cpp  stream_policy.h  stream_policy_factory.cpp  stream_policy_factory.h  validation_scheduler.cpp  validation_scheduler.h
src/policy/: fees.cpp  fees.h  policy.cpp  policy.h
src/primitives/: block.cpp  block.h  transaction.cpp  transaction.h
src/rpc/: abc.cpp  blockchain.cpp  blockchain.h  client.cpp  client.h  client_config.cpp  client_config.h  client_utils.cpp  client_utils.h  http_protocol.h  http_request.cpp  http_request.h  http_response.cpp  http_response.h  jsonwriter.cpp  jsonwriter.h  mining-fbb.cpp  mining.cpp  mining.h  misc.cpp  misc.h  net.cpp  protocol.cpp  protocol.h  rawtransaction.cpp  register.h  safe_mode.cpp  server.cpp  server.h  text_writer.h  tojson.h  webhook_client.cpp  webhook_client.h  webhook_client_defaults.h
src/script/: instruction.h  instruction_iterator.h  int_serialization.h  interpreter.cpp  interpreter.h  ismine.cpp  ismine.h  limitedstack.cpp  limitedstack.h  mvcconsensus.cpp  mvcconsensus.h  opcodes.cpp  opcodes.h  script.cpp  script.h  script_error.cpp  script_error.h  script_flags.h  script_num.cpp  script_num.h  scriptcache.cpp  scriptcache.h  sigcache.cpp  sigcache.h  sighashtype.h  sign.cpp  sign.h  standard.cpp  standard.h
src/secp256k1/: .gitignore  CMakeLists.txt  Makefile.am  README.md  configure.ac  libsecp256k1.pc.in
src/secp256k1/contrib/: lax_der_parsing.h
src/secp256k1/src/: libsecp256k1-config.h.cmake.in  tests.c
src/secp256k1/src/java/: org_mvc_NativeSecp256k1.c  org_mvc_NativeSecp256k1.h  org_mvc_Secp256k1Context.c  org_mvc_Secp256k1Context.h
src/secp256k1/src/java/org/mvc/: NativeSecp256k1.java  NativeSecp256k1Test.java  NativeSecp256k1Util.java  Secp256k1Context.java
src/secp256k1/src/modules/multiset/: Makefile.am.include  README.md
src/secp256k1/src/modules/recovery/: Makefile.am.include
src/support/: cleanse.cpp  cleanse.h  events.h  lockedpool.cpp  lockedpool.h
src/support/allocators/: secure.h  zeroafterfree.h
src/univalue/: CMakeLists.txt
src/univalue/include/: univalue.h  univalue_escapes.h
src/univalue/lib/: univalue_read.cpp
src/univalue/test/: object.cpp
src/wallet/: CMakeLists.txt  coincontrol.h  crypter.cpp  crypter.h  db.cpp  db.h  finaltx.cpp  finaltx.h  rpcdump.cpp  rpcdump.h  rpcwallet.cpp  rpcwallet.h  wallet.cpp  wallet.h  walletdb.cpp  walletdb.h
src/zmq/: CMakeLists.txt  zmq_publisher.cpp  zmq_publisher.h  zmqabstractnotifier.cpp  zmqabstractnotifier.h  zmqconfig.h  zmqnotificationinterface.cpp  zmqnotificationinterface.h  zmqpublishnotifier.cpp  zmqpublishnotifier.h
util/newchain/: README.md  newgenesisblock.md  notice.md
util/seeds/: README.md  generate-seeds.py  nodes_main.txt  nodes_test.txt
(+6 files in other folders)
